Correct dark mode styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -329,7 +329,7 @@ body {
   }
   .dark {
     --background: 222.2 14% 4.9%;
-    --foreground: 210 10% 18%;
+    --foreground: 210 90% 98%;
     --card: 222.2 14% 4.9%;
     --card-foreground: 210 10% 18%;
     --popover: 222.2 14% 4.9%;
